<resources>
    <string name="app_name">Online Attendance System</string>

    <string name="email">abc@gmail.com</string>
    <string name="pass">**********</string>

    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="id">Student ID (e.g. 123456789)</string>
    <string name="phone">Phone Number (e.g. 647-123-4567)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
