<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".Prof_Reg_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@color/Primary"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/pfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="Full Name"
        android:textColor="@color/Font"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/profName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/fName"
        android:textColor="@color/Primary"
        android:textColorHint="#AEA4A4"
        android:textCursorDrawable="@color/Primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="Email"
        android:textColor="@color/Font"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/profEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/Primary"
        android:textColorHint="#AEA4A4"
        android:textCursorDrawable="@color/Primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="Password"
        android:textColor="@color/Font"
        android:textColorHighlight="@color/Primary"
        android:textColorLink="@color/Primary"
        android:textCursorDrawable="@color/Primary"
        android:textSize="17sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#AEA4A4">

        <EditText
            android:id="@+id/profPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="textPassword"
            android:textColor="@color/Primary"
            android:textColorHighlight="@color/Primary"
            android:textColorLink="@color/Primary"
            android:textCursorDrawable="@color/Primary"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="Phone"
        android:textColor="@color/Font"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/profPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/Primary"
        android:textColorHint="#AEA4A4"
        android:textCursorDrawable="@color/Primary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/profReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@color/Primary"
        android:fontFamily="@font/quicksand_medium"
        android:text="Sign Up"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="Already have an account?"
            android:textColor="@color/Font"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="LOGIN"
            android:textColor="@color/Primary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="here."
            android:textColor="@color/Font"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>